added classpath support to the String --> URL conversion feature (also added logging statements for clarity); updated related tests